--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -93,7 +93,7 @@
 
     // Section One ------------------------------------------------------------- //
 
-    #sectionOne {
+    #sectionOne .contentContainer {
         display: grid;
     }
     #sectionOne .rowOne {
